--- a/index.html
+++ b/index.html
@@ -4,17 +4,21 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>GeoAR.js demo</title>
-    <script src='https://aframe.io/releases/0.9.2/aframe.min.js'></script>
-    <script src="https://raw.githack.com/jeromeetienne/AR.js/master/aframe/build/aframe-ar.min.js"></script>
-    <script src="https://raw.githack.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
+    <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
+    <script src='../../build/aframe-ar.js'></script>
     <script>
       THREEx.ArToolkitContext.baseURL = 'https://raw.githack.com/jeromeetienne/ar.js/master/three.js/'
     </script>
 </head>
 
 <body style='margin: 0; overflow: hidden;'>
-<a-entity gltf-model="./assets/magnemite/scene.gltf" rotation="0 180 0" scale="0.15 0.15 0.15" gps-entity-place="longitude: 12.489820; latitude: 41.892590;" animation-mixer/>
+<a-scene
+        vr-mode-ui="enabled: false"
+        embedded
+        arjs='sourceType: webcam; sourceWidth:1280; sourceHeight:960; displayWidth: 1280; displayHeight: 960; debugUIEnabled: false;'>
 
-    <a-camera gps-camera rotation-reader></a-camera>
+    <a-box material="color: red;" scale="300 300 300" position="0 0 0" gps-entity-place="latitude: 44.498529; longitude: 11.356657;"></a-box>
+    <!-- use far property to hide objects over 5000 meters -->
+    <a-camera far="5000" gps-camera rotation-reader>
+    </a-camera>
 </a-scene>
-</body>
