--- a/index.html
+++ b/index.html
@@ -2,26 +2,13 @@
 <html lang="en">
 
 <body onload=main();>
-<model-viewer id="ar_viewer" poster="https://cdn.dribbble.com/users/765253/screenshots/2540865/loader.gif"
-              alt="AR Model" src="https://api3.profilebud.com/ArmChair.glb" autoplay ar ar-modes="webxr scene-viewer quick-look" environment-image="neutral" camera-controls>
-    <button slot="ar-button"
-            style="background-color: #eb6556; border-radius: 5px; border: none; position: absolute; width: 126px; bottom: 10px; left: calc(50% - 63px); margin: auto; display: block;">
-        <p style="color: aliceblue; margin: 0;">View this in AR ✨</p>
-    </button>
-</model-viewer>
-
-<model-viewer id="ar_viewer" poster="https://cdn.dribbble.com/users/765253/screenshots/2540865/loader.gif"
-              alt="AR Model" src="https://api3.profilebud.com/Chair.gltf" autoplay ar ar-modes="webxr scene-viewer quick-look" environment-image="neutral" camera-controls>
-    <button slot="ar-button"
-            style="background-color: #eb6556; border-radius: 5px; border: none; position: absolute; width: 126px; bottom: 10px; left: calc(50% - 63px); margin: auto; display: block;">
-        <p style="color: aliceblue; margin: 0;">View this in AR ✨</p>
-    </button>
-</model-viewer>
-
-
-
-<model-viewer id="ar_viewer" poster="https://cdn.dribbble.com/users/765253/screenshots/2540865/loader.gif"
-              alt="AR Model" src="https://api3.profilebud.com/Horse.glb" autoplay ar ar-modes="webxr scene-viewer quick-look" environment-image="neutral" camera-controls>
+<model-viewer
+        id="ar_viewer"
+        poster="https://cdn.dribbble.com/users/765253/screenshots/2540865/loader.gif"
+        alt="AR Model"
+        src="./assets/magnemite/scene.gltf"
+        autoplay ar ar-modes="webxr scene-viewer quick-look" environment-image="neutral" camera-controls
+>
     <button slot="ar-button"
             style="background-color: #eb6556; border-radius: 5px; border: none; position: absolute; width: 126px; bottom: 10px; left: calc(50% - 63px); margin: auto; display: block;">
         <p style="color: aliceblue; margin: 0;">View this in AR ✨</p>
