--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         id="ar_viewer"
         poster="https://cdn.dribbble.com/users/765253/screenshots/2540865/loader.gif"
         alt="AR Model"
-        src="./assets/magnemite/scene.gltf"
+        src="./magnemite/scene.gltf"
         autoplay ar ar-modes="webxr scene-viewer quick-look" environment-image="neutral" camera-controls
 >
     <button slot="ar-button"
